# school-25_26

./: SinglyLinkedList.py  lotto.py  magic_methods.py  mitarbeiter.py  poker.py  poker_test.py  vererbung.py  zip_filter_map.py
INFI/: pyproject.toml
INFI/hypothesen/: main.py
INFI/playwright/: .gitignore  README.md  flake.nix  moodle_kurse.csv  pyproject.toml
INFI/playwright/src/: ddg.py  main.py  moodle.py  treibhaus.py
INFI/regression/: README.md  main.py
INFI/wetterdaten/: .gitignore  main.typ  pyproject.toml
INFI/wetterdaten/data/: metadata.txt  wetter_hohe_warte.csv
INFI/wetterdaten/src/: main.py
INFI/wintertourismus/: .gitignore  Zeitreihe-Winter-2024011810.xlsx  main.py  pyproject.toml
KINZ/: .gitignore  main.py  pyproject.toml  wortspiel.py
KINZ/CNN/: .envrc  .gitignore  README.md  flake.nix  pyproject.toml
KINZ/CNN/src/: erkennung.py  train.py
KINZ/MNIST-Fashion/: .gitignore  flake.nix  main.py  pyproject.toml
KINZ/MNIST-Fashion/src/: main.py
KINZ/RNN/: main.py
SPL/: .gitignore  README.md  _monoalphabetic_crack.py  _monoalphabetic_encrypt_decrypt.py  ana.py  flake.nix  gen_compile_commands.py  justfile  laborbericht_2.typ  laborbericht_3.typ  platformio.ini  pyproject.toml  zweipunktregelung.ana  zweipunktregelung.py
SPL/logs/: ana.txt
SPL/src/: main.cpp
SWP1/csharp/WebAPI/: WebAPI.sln
SWP1/csharp/WebAPI/Models/: Article.cs  Models.csproj
SWP1/csharp/WebAPI/ORM/: ORM.csproj
SWP1/csharp/WebAPI/RestfulService/: Program.cs  RestfulService.csproj  RestfulService.http  (+1 more)
SWP1/python/: comprehentions.py  lotto.py  poker.py
(+13 files in other folders)
