[project]
name = "kinz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gensim>=4.4.0",
    "keras>=3.12.0",
    "matplotlib>=3.10.7",
    "numby>=0.2.0",
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "pip>=25.3",
    "spacy>=3.8.11",
    "tensorflow>=2.20.0",
]
