[project]
name = "mnist-fashion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "keras>=3.11.3",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pillow>=11.3.0",
    "tensorflow>=2.20.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
